--- a/css/StoryPage.css
+++ b/css/StoryPage.css
@@ -23,6 +23,7 @@ body {
     font-size: 20px;
     text-decoration: none;
     color: var(--text-main-color);
+    position: relative;
 }
 
 .top img{
@@ -34,6 +35,8 @@ body {
     display: flex;
     margin-left: 45px;
 }
+
+/* 分類hover效果 */
 
 .top ul li a:hover{
     color: pink;
