--- a/css/StorePage.css
+++ b/css/StorePage.css
@@ -7,8 +7,7 @@ body {
 .wrapper {
     width: 1200px;
     margin: 0 auto;
-    font-family: var(--text-style);
-    color: var(--text-main-color);
+    /* border: 1px solid red; */
 }
 
 /* TOP */
@@ -83,68 +82,121 @@ body {
     margin-right: 10px;
 }
 
-/* main */
 
-.menuWrapper{
-    width: 1200px;
-    height: 820px;
-    background-image: url(../img/menu_bgi.png);
-    background-position: 50% 50%;
-    position: relative;
-    z-index: 0; /* 內容層 為了不受透明度影響*/
-}
+/* main-top */
 
-.textHeader{
+.storeWrapper{
     width: 1200px;
-    height: 200px;
+    height: 400px;
+    background-image: url(../img/big_pic.jpg);
     background-size: cover;
     background-position: center center;
+}
+
+.storeWrapper h1{
+    font-family: var(--text-style);
     font-size: 100px;
+    color: var(--text-main-color);
+    height: 300px;
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
 }
 
-.textWrapper{
+/* storeMain */
+
+.storeMain{
     display: flex;
-    font-size: 60px;
+    margin: 30px 0;
+    align-items: center;
+    justify-content: center;
 }
 
-.textLeft{
-    line-height: 1.6;
-    margin: 100px 30px 0 120px;
+.storeLe{
+    width: 300px;
+    height: 540px;
+    border-radius: 20px;
+    color: var(--text-main-color);
+    background-color: #120F10;
+    margin-right: 60px;
+    padding: 30px;
+    line-height: 2;
 }
 
-.textRight{
-    line-height: 1.6;
-    margin: 100px 30px 0 50px;
+.storeLe li{
+    display: flex;
 }
 
-.menuWrapper-2{
-    width: 110%;
-    height: 110%;
-    position: absolute;
-    top: 0;
-    left: 30px;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    opacity: 0.1;
-
-    /* 預防點擊干擾 */
-    pointer-events: none;
-      /* 動畫特效 無限循環 */
-    animation: flash 1s ease-in-out infinite alternate;
+.storeTitle img{
+    width: 40px;
+    height: auto;
 }
 
-@keyframes flash {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 0.3;
-    }
+.storeTitle h2{
+    font-size: 24px;
+    align-items: center;
+    margin-left: 4px;
+    margin-bottom: 8px;
 }
+
+.storeIndex{
+    flex-direction: column;
+    margin-left: 45px;
+}
+
+.storeIndex p:first-child{
+    font-size: 20px;
+}
+
+.storeIndex p:last-child{
+    font-size: 14px;
+    margin-bottom: 8px;
+    color: #E81996;
+}
+
+.storePhoto p{
+    font-size: 20px;
+    margin-left: 45px;
+    letter-spacing: 2px;
+}
+
+iframe{
+    border-radius: 20px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* Footer */
 .topIcon ul{
