--- a/css/Events.css
+++ b/css/Events.css
@@ -5,22 +5,21 @@ body {
 }
 
 .wrapper {
-    width: 1200px;
+    width: 1440px;
     margin: 0 auto;
-    /* border: 1px solid red; */
 }
 
 /* TOP */
 .top{
     display: flex;
-    width: 1200px;
+    width: 1440px;
     height: 90px;
     align-items: center;
 }
 
 .top li a{
     font-family: var(--text-style);
-    font-size: 20px;
+    font-size: 24px;
     text-decoration: none;
     color: var(--text-main-color);
     position: relative;
@@ -31,7 +30,7 @@ body {
 }
 
 .top ul{
-    width: 1200px;
+    width: 1440px;
     display: flex;
     margin-left: 45px;
 }
@@ -86,7 +85,7 @@ body {
 /* main-top區域 */
 
 .eventWrapper{
-    width: 1200px;
+    width: 1440px;
     height: 400px;
     background-image: url(../img/big_pic.jpg);
     background-size: cover;
@@ -95,7 +94,7 @@ body {
 
 .eventWrapper h1{
     font-family: var(--text-style);
-    font-size: 100px;
+    font-size: 120px;
     color: var(--text-main-color);
     height: 300px;
     display: flex;
@@ -106,14 +105,14 @@ body {
 /* 活動區塊區域 */
 
 .eventMain{
-    width: 1200px;
+    width: 1440px;
     height: 800px;
     justify-content: center;
     display: flex;
 }
 
 .listWrapper{
-    width: 1000px;
+    width: 1200px;
     background-color: #222;
     border-radius: 20px;
     margin: 50px auto;
@@ -123,7 +122,7 @@ body {
     list-style: none;
     padding: 15px;
     margin: 0 auto;
-    width: 800px;
+    width: 1000px;
 }
 
 .eventList li a{
@@ -217,7 +216,7 @@ body {
 
 .pagNum li{
     color: var(--text-main-color);
-    font-size: 15px;
+    font-size: 16px;
     padding: 4px 8px;
     border: 1px solid var(--text-main-color);
     border-radius: 10px;
@@ -234,14 +233,14 @@ body {
 .topIcon ul{
     display: flex;
     align-items: center;
-    width: 1200px;
+    width: 1440px;
     margin: 0 auto;
 }
 
 .topText p{
     color: var(--text-main-color);
     font-family: var(--text-style);
-    font-size: 20px;
+    font-size: 24px;
     margin-left: 50px;
 }
 
@@ -252,13 +251,14 @@ body {
 }
 
 .bottomText ul{
-    width: 1200px;
+    width: 1440px;
     display: flex;
 }
 
 .bottomText ul li{
     display: flex;
     flex-grow: 1;
+    margin-left: 40px;
 }
 
 .bottomText ul li img{
