--- a/css/StoryPage.css
+++ b/css/StoryPage.css
@@ -5,7 +5,7 @@ body {
 }
 
 .wrapper {
-    width: 1200px;
+    width: 1440px;
     margin: 0 auto;
     /* border: 1px solid red; */
 }
@@ -13,14 +13,14 @@ body {
 /* TOP */
 .top{
     display: flex;
-    width: 1200px;
+    width: 1440px;
     height: 90px;
     align-items: center;
 }
 
 .top li a{
     font-family: var(--text-style);
-    font-size: 20px;
+    font-size: 24px;
     text-decoration: none;
     color: var(--text-main-color);
     position: relative;
@@ -31,7 +31,7 @@ body {
 }
 
 .top ul{
-    width: 1200px;
+    width: 1440px;
     display: flex;
     margin-left: 45px;
 }
@@ -85,7 +85,7 @@ body {
 
 /* main */
 .logoWrapper{
-    width: 1200px;
+    width: 1440px;
     height: 400px;
     /* border: 2px solid red; */
 }
@@ -103,13 +103,13 @@ body {
 .storyText h1{
     font-family: var(--text-style);
     color: var(--text-main-color);
-    font-size: 60px;
+    font-size: 70px;
     text-align: center;
     margin: 30px 0 30px 0;
 }
 
 .storyText p{
-    width: 1200px;
+    width: 1440px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: var(--text-main-color);
     font-size: 30px;
@@ -120,18 +120,17 @@ body {
 }
 
 /* Footer */
-
 .topIcon ul{
     display: flex;
     align-items: center;
-    width: 1200px;
+    width: 1440px;
     margin: 0 auto;
 }
 
 .topText p{
     color: var(--text-main-color);
     font-family: var(--text-style);
-    font-size: 20px;
+    font-size: 24px;
     margin-left: 50px;
 }
 
@@ -142,13 +141,14 @@ body {
 }
 
 .bottomText ul{
-    width: 1200px;
+    width: 1440px;
     display: flex;
 }
 
 .bottomText ul li{
     display: flex;
     flex-grow: 1;
+    margin-left: 40px;
 }
 
 .bottomText ul li img{
