修正HomePage動態效果&Events文案撰寫

--- a/css/Events.css
+++ b/css/Events.css
@@ -87,7 +87,7 @@ body {
 .eventWrapper{
     width: 1440px;
     height: 400px;
-    background-image: url(../img/big_pic.jpg);
+    background-image: url(../img/big_pic3.jpg);
     background-size: cover;
     background-position: center center;
 }
