--- a/css/Events.css
+++ b/css/Events.css
@@ -5,14 +5,14 @@ body {
 }
 
 .wrapper {
-    width: 1440px;
+    width: 90%;
     margin: 0 auto;
 }
 
 /* main-top區域 */
 
 .eventWrapper{
-    width: 1440px;
+    width: 100%;
     height: 400px;
     background-image: url(../img/big_pic3.jpg);
     background-size: cover;
@@ -32,14 +32,14 @@ body {
 /* 活動區塊區域 */
 
 .eventMain{
-    width: 1440px;
+    width: 100%;
     height: 800px;
     justify-content: center;
     display: flex;
 }
 
 .listWrapper{
-    width: 1200px;
+    width: 90%;
     background-color: #222;
     border-radius: 20px;
     margin: 50px auto;
