--- a/css/HomePage.css
+++ b/css/HomePage.css
@@ -14,7 +14,7 @@ body {
 
 .cycle{
     position: relative;
-    width: 1440px;
+    width: 100%;
     height: 400px;
     overflow: hidden;
 }
@@ -46,7 +46,7 @@ body {
 
 .story{
     position: relative;
-    width: 1440px;
+    width: 100%;
     height: 240px;
 }
 
@@ -78,7 +78,7 @@ body {
 
 .story .img-gif{
     display: block;
-    width: 1440px;
+    width: 100%;
     height: 240px;
     background-image: url(../img/story_2.gif);
     opacity: 0.2;
@@ -159,7 +159,6 @@ body {
 }
 
 .events ul li h2{
-    /* height: 80px; */
     font-family: var(--text-style);
     color: var(--text-main-color);
     font-size: 48px;
@@ -213,7 +212,7 @@ body {
 /* 最新菜單區 */
 
 .menu{
-    width: 1440px;
+    width: 100%;
     height: 260px;
     overflow: hidden;
 }
@@ -263,11 +262,11 @@ body {
 /* 我預設第一張圖展開，其他為 80px */
 /* 當元素的 flex 屬性發生變化時，動畫會以，持續 0.5 秒（0.5s），使用緩和速度曲線（ease）渡動畫 */
 .menu ul li:nth-child(2) {
-  flex: 0 0 958px;
+  flex: 0 0 800px;
   transition: flex 1s ease;
 }
 .menu ul li:nth-child(n+3) {
-  flex: 0 0 80px;
+  flex: 0 0 120px;
   transition: flex 1s ease;
 }
 
@@ -284,7 +283,7 @@ body {
 /* 照片影集 */
 
 .photoWrapper{
-    width: 1440px;
+    width: 100%;
     text-align: center;
 }
 
