--- a/css/OnlineShop.css
+++ b/css/OnlineShop.css
@@ -5,7 +5,7 @@ body {
 }
 
 .wrapper {
-    width: 1440px;
+    width: 90%;
     margin: 0 auto;
 }
 
@@ -13,7 +13,7 @@ body {
 
 .shop{
     position: relative;
-    width: 1440px;
+    width: 100%;
     height: 400px;
     overflow: hidden;
 }
