--- a/css/StorePage.css
+++ b/css/StorePage.css
@@ -5,14 +5,14 @@ body {
 }
 
 .wrapper {
-    width: 1440px;
+    width: 90%;
     margin: 0 auto;
 }
 
 /* main-top */
 
 .storeWrapper{
-    width: 1440px;
+    width: 100%;
     height: 400px;
     background-image: url(../img/big_pic.jpg);
     background-size: cover;
