--- a/css/StoryPage.css
+++ b/css/StoryPage.css
@@ -5,14 +5,14 @@ body {
 }
 
 .wrapper {
-    width: 1440px;
+    width: 90%;
     margin: 0 auto;
     /* border: 1px solid red; */
 }
 
 /* main */
 .logoWrapper{
-    width: 1440px;
+    width: 100%;
     height: 400px;
     /* border: 2px solid red; */
 }
@@ -43,7 +43,7 @@ body {
 }
 
 .storyText p{
-    width: 1440px;
+    width: 100%;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: var(--text-main-color);
     font-size: 30px;
