--- a/css/OnlineShop.css
+++ b/css/OnlineShop.css
@@ -7,6 +7,7 @@ body {
 .wrapper {
     width: 90%;
     margin: 0 auto;
+    margin-top: 50px;
 }
 
 /* shopTop */
@@ -30,7 +31,7 @@ body {
 }
 
 .shopImg img{
-    width: auto;
+    width: 100%;
     height: auto;
     object-fit: cover;
 }
@@ -45,11 +46,12 @@ body {
 
 .shopWrapper{
     display: flex;
-    width: 90%;
+    width: 100%;
     margin: 0 auto;
 }
 
-nav{
+.navList{
+    max-width: 300px;
     color: var(--text-main-color);
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     margin-top: 70px;
@@ -58,8 +60,9 @@ nav{
     line-height: 1.6;
 }
 
-nav ul{
+.navList ul{
     margin-bottom: 30px;
+    flex-direction: column;
 }
 
 h1{
@@ -79,12 +82,12 @@ h1::before{
     margin-top: 10px;
 }
 
-nav li{
+.navList li{
     font-size: 24px;
     margin-left: 20px;
 }
 
-nav li:hover{
+.navList li:hover{
     color: pink;
 }
 
