--- a/css/HomePage.css
+++ b/css/HomePage.css
@@ -31,7 +31,7 @@ body {
 }
 
 .cycleImg img{
-    width: auto;
+    width: 100%;
     height: auto;
     object-fit: cover;
 }
@@ -231,7 +231,7 @@ body {
 }
 
 .menu ul li:first-child {
-    width: 242px;
+    width: 15%;
     flex-shrink: 0;
     justify-content: center;
     align-items: center;
@@ -262,22 +262,22 @@ body {
 /* 我預設第一張圖展開，其他為 80px */
 /* 當元素的 flex 屬性發生變化時，動畫會以，持續 0.5 秒（0.5s），使用緩和速度曲線（ease）渡動畫 */
 .menu ul li:nth-child(2) {
-  flex: 0 0 800px;
+  flex: 0 0 65%;
   transition: flex 1s ease;
 }
 .menu ul li:nth-child(n+3) {
-  flex: 0 0 120px;
+  flex: 0 0 7%;
   transition: flex 1s ease;
 }
 
 /* ❗️僅當滑鼠 hover 在圖片區塊（第2~n項）時才收縮其他 */
 .menu ul:has(li:nth-child(n+2):hover) li:nth-child(n+2) {
-  flex: 0 0 80px;
+  flex: 0 0 7%;
 }
 
 /* 滑鼠在某張圖片上，該圖展開 強制優先執行 */
 .menu ul li:nth-child(n+2):hover {
-  flex: 0 0 958px !important;
+  flex: 0 0 65% !important;
 }
 
 /* 照片影集 */
