--- a/css/HomePage.css
+++ b/css/HomePage.css
@@ -13,33 +13,50 @@ body {
 /* 輪播圖區 */
 
 .cycle{
-    position: relative;
     width: 100%;
     height: 400px;
     overflow: hidden;
+    position: relative;
 }
 
 .cycleImgList{
-    display: flex;
-    width: 100%;
-    height: 100%;
-    animation: autoplay 10s infinite;
+    position: relative;
+    left: 0;
 }
 
-.cycleImg{
-    flex: 0 0 100%;
+.cycleImgList li{
+    float: left;
 }
 
 .cycleImg img{
     width: 100%;
     height: auto;
-    object-fit: cover;
 }
 
-@keyframes autoplay {
-    0%, 33% { transform: translateX(0); }
-    33%, 66% { transform: translateX(-100%); }
-    66%, 100% { transform: translateX(-200%); }
+/* circle button */
+#contentButton{
+    text-align: center;
+    position: absolute;
+    bottom: 1%;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 10;
+    width: 100%;
+    height: 50px;
+}
+
+#contentButton li{
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: #ccc;
+    margin: 10px;
+
+    display: inline-block;
+}
+
+#contentButton li.clicked{
+    background-color: #666;
 }
 
 /* 品牌故事區 */
