--- a/css/OnlineShop.css
+++ b/css/OnlineShop.css
@@ -20,10 +20,12 @@ body {
 }
 
 .shopImgList{
-    display: flex;
-    width: 100%;
-    height: 100%;
-    animation: autoplay 10s infinite;
+    position: relative;
+    left: 0;
+}
+
+.shopImgList li{
+    float: left;
 }
 
 .shopImg{
@@ -33,13 +35,32 @@ body {
 .shopImg img{
     width: 100%;
     height: auto;
-    object-fit: cover;
 }
 
-@keyframes autoplay{
-    0%, 33% { transform: translateX(0); }
-    33%, 66% { transform: translateX(-100%); }
-    66%, 100% { transform: translateX(-200%); }
+/* circle button */
+#contentButton{
+    text-align: center;
+    position: absolute;
+    bottom: 1%;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 10;
+    width: 100%;
+    height: 50px;
+}
+
+#contentButton li{
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: #ccc;
+    margin: 10px;
+
+    display: inline-block;
+}
+
+#contentButton li.clicked{
+    background-color: #666;
 }
 
 /* 商品列表分類區域 */
