--- a/css/HomePage.css
+++ b/css/HomePage.css
@@ -14,7 +14,7 @@ body {
 
 .cycle{
     width: 100%;
-    height: 400px;
+    height: auto;
     overflow: hidden;
     position: relative;
 }
@@ -30,7 +30,7 @@ body {
 
 .cycleImg img{
     width: 100%;
-    height: auto;
+    height: 100%;
 }
 
 /* circle button */
@@ -46,8 +46,8 @@ body {
 }
 
 #contentButton li{
-    width: 20px;
-    height: 20px;
+    width: 15px;
+    height: 15px;
     border-radius: 50%;
     background-color: #ccc;
     margin: 10px;
@@ -64,7 +64,8 @@ body {
 .story{
     position: relative;
     width: 100%;
-    height: 240px;
+    min-height: 240px;
+    box-sizing: border-box;
 }
 
 .story h1{
@@ -82,7 +83,7 @@ body {
     font-family: var(--text-style);
     color: var(--text-main-color);
     font-size: 20px;
-    width: 900px;
+    max-width: 900px;
     margin-top: 45px;
 
     position: absolute;
@@ -91,6 +92,7 @@ body {
     transform: translateX(-50%);
 
     text-align: center;
+    padding: 0 10px;
 }
 
 .story .img-gif{
@@ -169,18 +171,30 @@ body {
 
 .events ul li{
     flex-grow: 1;
+    min-width: 0;
+    margin: 10px 0;
+    text-align: center;
 }
 
 .events ul li img{
+    display: block;
+    width: 100%;
+    height: 180px;
+    border-radius: 20px;
+    margin-bottom: 10px;
+    margin: 0 auto;
     object-fit: cover;
+    aspect-ratio: 4/3;
 }
 
 .events ul li h2{
+    width: 100%;
+    height: auto;
     font-family: var(--text-style);
     color: var(--text-main-color);
     font-size: 48px;
     text-align: center;
-    margin-right: 10px;
+    margin: 20px;
 }
 
 .events ul li button{
@@ -209,19 +223,11 @@ body {
     margin-bottom: 30px;
 }
 
-.events ul li img{
-    display: block;
-    width: 250px;
-    height: 180px;
-    border-radius: 20px;
-    margin-bottom: 10px;
-}
-
 .events ul li p{
-    width: 250px;
+    width: 100%;
     color: var(--text-main-color);
     text-align: center;
-
+    margin-top: 20px;
     /* 強制斷行 */
     word-break: break-all;
 }
@@ -255,11 +261,14 @@ body {
 }
 
 .menu ul li h3{
+    width: 100%;
+    height: auto;
     font-family: var(--text-style);
     color: var(--text-main-color);
     font-size: 48px;
     text-align: center;
     line-height: 260px;
+    margin: 20px;
 }
 
 .menu ul li img {
@@ -312,6 +321,16 @@ body {
     display: flex;
 }
 
+.photoTopList {
+  display: flex;
+  flex-wrap: nowrap; /* 不換行 */
+  gap: 10px;
+}
+.photoTopList li {
+  flex-grow: 1;
+  min-width: 0;
+}
+
 .photoTop ul li{
     display: flex;
     flex-grow: 1;
@@ -325,13 +344,15 @@ body {
     font-size: 20px;
     text-align: left;
     margin-top: 60px;
+    line-height: 1.2;
 }
 
 .photoTop img{
     width: 250px;
-    height: 250px;
+    height: auto;
     border-radius: 20px;
     margin: 0 20px 0 20px;
+    aspect-ratio: 1/1;
 }
 
 .photoTop img:hover{
@@ -343,7 +364,7 @@ body {
     color: var(--text-main-color);
     font-size: 48px;
     text-align: center;
-    margin: 40px auto;
+    margin: 20px auto;
 
 }
 
@@ -365,6 +386,97 @@ body {
 }
 
 
+@media screen and (max-width: 1200px){
+
+    /* 照片影集 */
+
+    .photoTop img{
+        width: 90%;
+        height: auto;
+        object-fit: cover;
+        aspect-ratio: 1/1;
+        margin: 0 10px 0 10px;
+
+    }
+
+    .photoButtom img{
+        width: 70%;
+        height: 100%;
+        object-fit: cover;
+        aspect-ratio: 1/1;
+        margin: 0 40px 0 40px;
+    }
+
+}
+
+@media screen and (max-width: 1150px){
+
+    /* 最新活動 */
+
+    .events ul li h2{
+        font-size: 32px;
+    }
+
+    .events ul li button{
+        width: 100%;
+        margin: 0 20px;
+    }
+
+}
+
+@media screen and (max-width: 900px){
+
+    /* 品牌故事區 */
+    .story {
+        position: relative;
+        min-height: auto;
+        padding: 20px;
+    }
+
+    .story h1{
+        font-size: 38px;
+    }   
+    
+    .story p{
+        position: relative;
+        margin: 0 auto;
+        font-size: 20px;
+    }
+
+
+    /* MENU */
+
+    .menu ul li h3{
+        font-size: 32px;
+    }    
+
+}
+
+@media screen and (max-width: 820px){
+
+    /* 照片影集 */
+
+    .photoTop{
+        overflow: hidden;
+    }
+
+    .photoTopList {
+        display: flex;
+        gap: 15px;
+        animation: scrollLeft 8s linear infinite;
+        width: max-content;
+    }
+
+    .photoTopList li {
+        flex: 0 0 auto;
+    }
+
+    @keyframes scrollLeft {
+        0% { transform: translateX(0); }
+        100% { transform: translateX(-50%); }
+    }
+
+}
 
 
 
