--- a/css/Events.css
+++ b/css/Events.css
@@ -34,7 +34,7 @@ body {
 
 .eventMain{
     width: 100%;
-    height: 800px;
+    height: 100%;
     justify-content: center;
     display: flex;
 }
@@ -50,7 +50,9 @@ body {
     list-style: none;
     padding: 15px;
     margin: 0 auto;
-    width: 1000px;
+    width: 100%;
+    height: auto;
+    max-width: 1000px;
 }
 
 .eventList li a{
@@ -63,6 +65,7 @@ body {
     color: var(--text-main-color);
     text-decoration: none;
     border-radius: 10px;
+    width: 95%;
 }
 
 .imgLe{
@@ -154,4 +157,89 @@ body {
 .pagNum li:hover{
     background: var(--text-main-color);
     color: black;
+}
+
+@media screen and (max-width: 1320px) {
+
+.eventList li a{
+    width: 95%;
+}
+    
+.imgLe {
+    margin: 0 10px 10px 0;
+    width: 5vw;
+  }
+
+.imgRi {
+    margin: 10px 0 0 10px;
+    width: 3vw;
+  }
+
+.eventText h2 {
+    font-size: 1.5vw;
+  }
+
+.eventText p {
+    font-size: 1.5vw;
+}
+
+}
+
+@media screen and (max-width: 1100px) {
+
+.eventList li a{
+    width: 95%;
+}
+
+}
+
+@media screen and (max-width: 900px) {
+
+.eventList li a{
+    width: 92%;
+    height: auto;
+}
+
+.listWrapper{
+    height: 75%;
+}
+
+.eventText h2 {
+    font-size: 20px;
+}
+
+.eventText p {
+    font-size: 16px;
+}
+
+.imgLe {
+    margin: 0 10px 10px 0;
+    width: 50px;
+  }
+
+.imgRi {
+    margin: 10px 0 0 10px;
+    width: 30px;
+  }
+
+}
+
+@media screen and (max-width: 572px) {
+.eventList li a{
+    width: 90%;
+    height: auto;
+}
+
+}
+
+@media screen and (max-width: 475px) {
+.eventList li a{
+    width: 88%;
+    height: auto;
+}
+
+.eventWrapper h1{
+    font-size: 100px;
+}
+
 }
