--- a/css/HomePage.css
+++ b/css/HomePage.css
@@ -478,6 +478,112 @@ body {
 
 }
 
+@media screen and (max-width: 475px){
+
+    /* 品牌故事區 */
+    .story h1{
+        font-size: 30px;
+    }
+
+    /* 最新活動 */
+    .events ul li h2{
+        font-size: 20px;
+    }
+
+    .events ul li {
+        flex: 1 1 50%;
+        margin: 5px 0;
+    }
+
+    .events{
+        display: flex;
+        height: auto;
+    }
+
+    .events ul li:first-child {
+        order: 2;
+        flex: 1 1 40%;
+        height: 120px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 0 10px;
+    }
+
+    .events ul li:first-child h2 {
+        font-size: 23px;
+        margin: 0;
+    }
+
+    .events ul li:nth-child(2){
+        display: none;
+    }
+
+    .events ul li img {
+        aspect-ratio: 1/1;
+        height: auto;
+        border-radius: 10px;
+    }
+
+    .events ul li p {
+        font-size: 14px;
+        margin-top: 10px;
+    }
+
+
+    /* MENU */
+
+    .menu {
+        height: 260px;
+    }
+
+    .menu ul {
+        display: flex;
+        flex-direction: row;
+        height: 100%;
+    }
+
+    
+    .menu ul li:first-child {
+        order: 1;
+        width: auto;
+        flex-shrink: 0;
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        padding: 0 10px;
+    }
+
+    .menu ul li:first-child h3 {
+        font-size: 20px;
+        margin: 0;
+        line-height: 1.2;
+    }
+
+    /* 圖片區 */
+    .menu ul li:not(:first-child) {
+        order: 1;
+        flex: 1;
+        overflow-x: auto;
+        display: flex;
+        height: 100%;
+    }
+
+    .menu ul li:not(:first-child) > div {
+        flex: 0 0 100%;
+        height: 100%;
+    }
+
+    .menu ul li:not(:first-child) img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        display: block;
+    }
+
+}
+
+
 
 
 
