--- a/css/MenuPage.css
+++ b/css/MenuPage.css
@@ -18,13 +18,15 @@ body {
     width: 100%;
     height: 820px;
     background-image: url(../img/menu_bgi.png);
-    background-position: 50% 50%;
+    background-position: center center;
+    background-size: contain;
+    background-repeat: no-repeat;
     position: relative;
     z-index: 0; /* 內容層 為了不受透明度影響*/
 }
 
 .textHeader{
-    width: 1440px;
+    width: 100%;
     height: 200px;
     background-size: cover;
     background-position: center center;
@@ -36,31 +38,36 @@ body {
 
 .textWrapper{
     display: flex;
-    font-size: 60px;
+    font-size: 50px;
+    width: 100%;
+    max-width: 100%;
+    padding: 0 20px;
+    box-sizing: border-box;
 }
 
 .textLeft{
     line-height: 1.6;
     flex-grow: 1;
-    margin: 150px 10px 0 250px;
+    margin: 200px 10px 0 170px;
 }
 
 .textRight{
     line-height: 1.6;
     flex-grow: 1;
-    margin: 150px 10px 0;
+    margin: 200px 10px 0;
 }
 
 .menuWrapper-2{
-    width: 110%;
-    height: 110%;
     position: absolute;
-    top: 0;
-    left: 30px;
+    width: 100%;
+    height: 100%;
+    top: -10px;
+    left: 0px;
     width: 100%;
     height: 100%;
     z-index: -1;
     opacity: 0.1;
+    object-fit: contain;
 
     /* 預防點擊干擾 */
     pointer-events: none;
@@ -75,4 +82,73 @@ body {
     to {
         opacity: 0.3;
     }
+}
+
+@media (max-width: 1372px) {
+  .textWrapper {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 10px;
+  }
+
+  .textLeft,
+  .textRight {
+    margin: 10px 0 0 0;
+    font-size: 45px;
+  }
+
+  .textLeft{
+    margin-top: 100px;
+  }
+
+  .menuWrapper{
+    background-size: auto;
+  }
+
+  .menuWrapper-2{
+    object-fit: none;
+  }
+
+}
+
+@media (max-width: 1190px) {
+
+  .menuWrapper{
+    background-size: auto;
+  }
+
+  .menuWrapper-2{
+    object-fit: none;
+  }
+
+}
+
+@media (max-width: 650px) {
+  .menuWrapper {
+    background-position: top center;
+  }
+
+  .menuWrapper-2 {
+    background-position: top center;
+    top: auto;
+    left: auto;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+  }
+
+}
+
+@media (max-width: 475px) {
+
+  .textLeft{
+    margin-top: 50px;
+  }
+
+  .menuWrapper-2 {
+    display: none;
+  }
+
 }
