--- a/css/MenuPage.css
+++ b/css/MenuPage.css
@@ -110,7 +110,7 @@ body {
     }
 }
 
-@media (max-width: 1372px) {
+@media screen and (max-width: 1372px) {
   .textWrapper {
     flex-direction: column;
     align-items: center;
@@ -138,7 +138,7 @@ body {
 
 }
 
-@media (max-width: 1190px) {
+@media screen and (max-width: 1190px) {
 
   .menuWrapper{
     background-size: auto;
@@ -150,7 +150,7 @@ body {
 
 }
 
-@media (max-width: 650px) {
+@media screen and (max-width: 650px) {
   .menuWrapper {
     background-position: top center;
   }
@@ -167,7 +167,7 @@ body {
 
 }
 
-@media (max-width: 475px) {
+@media screen and (max-width: 475px) {
 
   .textLeft{
     margin-top: 50px;
