--- a/css/OnlineShop.css
+++ b/css/OnlineShop.css
@@ -232,7 +232,7 @@ h1::before{
 }
 
 
-@media (max-width: 1200px) {
+@media screen and (max-width: 1200px) {
   .main ul li {
     flex: 0 1 calc(50% - 20px);
     margin: 10px;
@@ -257,7 +257,7 @@ h1::before{
   }
 }
 
-@media (max-width: 820px) {
+@media screen and (max-width: 820px) {
 
     h1{
         font-size: 24px;
@@ -281,7 +281,7 @@ h1::before{
 
 }
 
-@media (max-width: 630px) {
+@media screen and (max-width: 630px) {
 
     h1{
         font-size: 20px;
@@ -311,4 +311,18 @@ h1::before{
         font-size: 16px;
     }
 
+}
+
+@media screen and (max-width: 475px) {
+
+    .navList {
+        max-width: 50px;
+        margin-right: 40px;
+        padding-left: 0px;
+        margin-top: 50px;
+    }
+
+    .navList ul{
+        margin-left: 20px;
+    }
 }
